--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,9 @@
     <string name="category_top_rated">Top Rated</string>
     <string name="category_upcoming">Upcoming</string>
 
+    <string name="movie_detail_cast">Cast</string>
+    <string name="movie_detail_similar">Similar</string>
+    <string name="movie_detail_recommendation">Recommendation</string>
+
     <string name="string_unknown">UNKNOWN</string>
 </resources>
